--- a/app/src/main/res/layout/fragment_week.xml
+++ b/app/src/main/res/layout/fragment_week.xml
@@ -33,9 +33,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="16dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginRight="16dp"
                     android:background="@drawable/background_current_weather"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingTop="0dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
